syntax = "proto3";

package proto;

option go_package = "state";
option (gogoproto.stable_marshaler_all) = true;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

message UserAccountData {
    uint64 Nonce           = 1;
    bytes  Balance         = 2 [(gogoproto.casttypewith) = "math/big.Int;github.com/ElrondNetwork/elrond-go/data.BigIntCaster"];
    bytes  CodeHash        = 3;
    bytes  RootHash        = 4;
    bytes  Address         = 5;
    bytes  DeveloperReward = 6 [(gogoproto.casttypewith) = "math/big.Int;github.com/ElrondNetwork/elrond-go/data.BigIntCaster"];
    bytes  OwnerAddress    = 7;
    bytes  UserName        = 8;
    bytes  CodeMetadata    = 9;
}

message CodeEntry{
    bytes  Code          = 1;
    uint32 NumReferences = 2;
}
